# University_game

./: .gitignore  CMakeLists.txt  README.md  construct_quest.cpp  main.cpp  structure.cpp  structure.h
.github/workflows/: tests.yml
json/: quest1.json  quest2.json  quest3.json
